jlamontSC-test/src/objects/Email_Sent__c.object
<CustomObject>
    <fields>
        <fullName>Closing_Name__c</fullName>
        <label>Closing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Phrase__c</fullName>
        <label>Closing Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Entity_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Entity/Team</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipLabel>Emails Sent</relationshipLabel>
        <relationshipName>Emails_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Events_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Events</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Emails Sent</relationshipLabel>
        <relationshipName>Emails_Sent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image_Link__c</fullName>
        <label>Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lists_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lists Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lists</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Emails Sent (Lists Campaign)</relationshipLabel>
        <relationshipName>Emails_Sent_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paragraph_1__c</fullName>
        <label>Paragraph 1</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paragraph_2__c</fullName>
        <label>Paragraph 2</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paragraph_3__c</fullName>
        <label>Paragraph 3</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Sent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Email Sent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>